--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+/* Основной стиль сайта Моль Демьен */
+
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
 
 body {
   margin: 0;
   padding: 0;
-  background-color: #050505;
-  background-image: url('https://i.ibb.co/1dFH9Nn/dark-texture.jpg');
+  background-color: #000000;
   background-size: cover;
   background-attachment: fixed;
   font-family: 'UnifrakturCook', cursive;
@@ -93,3 +94,4 @@ footer {
   color: #aaa;
   text-shadow: 0 0 2px #a10000;
 }
+
