--- a/style.css
+++ b/style.css
@@ -94,4 +94,32 @@ footer {
   color: #aaa;
   text-shadow: 0 0 2px #a10000;
 }
+.glitch-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 5;
+}
+
+.glitch {
+  position: absolute;
+  width: 80px;
+  height: auto;
+  opacity: 0.15;
+  animation: float 20s infinite ease-in-out;
+}
+
+.glitch:nth-child(1) { top: 10%; left: 20%; }
+.glitch:nth-child(2) { top: 40%; left: 70%; }
+.glitch:nth-child(3) { top: 80%; left: 30%; }
+.glitch:nth-child(4) { top: 60%; left: 5%; }
+
+@keyframes float {
+  0% { transform: translateY(0px) rotate(0deg); }
+  50% { transform: translateY(-10px) rotate(2deg); }
+  100% { transform: translateY(0px) rotate(0deg); }
+}
 
