--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* Основной стиль сайта Моль Демьен */
-
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
 
 body {
@@ -94,32 +92,38 @@ footer {
   color: #aaa;
   text-shadow: 0 0 2px #a10000;
 }
-.glitch-container {
-  position: fixed;
-  top: 0;
-  left: 0;
+.image-chaos {
+  position: relative;
   width: 100%;
-  height: 100%;
+  height: 0;
   pointer-events: none;
-  z-index: 5;
+  z-index: 0;
 }
 
-.glitch {
+.chaos-img {
   position: absolute;
-  width: 80px;
-  height: auto;
-  opacity: 0.15;
-  animation: float 20s infinite ease-in-out;
+  width: 90px;
+  opacity: 0.35;
+  z-index: 0;
+  transform: rotateZ(var(--angle));
+  filter: contrast(120%) grayscale(20%) brightness(0.8);
 }
 
-.glitch:nth-child(1) { top: 10%; left: 20%; }
-.glitch:nth-child(2) { top: 40%; left: 70%; }
-.glitch:nth-child(3) { top: 80%; left: 30%; }
-.glitch:nth-child(4) { top: 60%; left: 5%; }
+.chaos1 {
+  top: 60px;
+  left: 5%;
+  --angle: -12deg;
+}
 
-@keyframes float {
-  0% { transform: translateY(0px) rotate(0deg); }
-  50% { transform: translateY(-10px) rotate(2deg); }
-  100% { transform: translateY(0px) rotate(0deg); }
+.chaos2 {
+  top: 220px;
+  left: 70%;
+  --angle: 8deg;
+}
+
+.chaos3 {
+  top: 150px;
+  left: 40%;
+  --angle: 4deg;
 }
 
