--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
 
 body {
+  cursor: url('https://cur.cursors-4u.net/cursors/cur-13/cur1174.cur'), auto;
   margin: 0;
   padding: 0;
   background-color: #000;
