--- a/style.css
+++ b/style.css
@@ -1,8 +1,25 @@
 body {
   margin: 0;
-  background-color: #000;
   font-family: 'Press Start 2P', monospace;
   color: white;
+  background-image: url('images/edited_with_shadow_and_noise_v2.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 0;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
 }
 
 .site-title-box {
@@ -115,3 +132,4 @@ body {
   font-size: 10px;
   margin: 0;
 }
+
