--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   background: #000;
-  cursor: url('cursor.png'), auto;
+  cursor: url('icons/cursor.png'), auto;
   color: #fff;
   font-family: monospace;
 }
