--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   bottom: 50px;
   left: 10px;
   background: #111;
-  border: 1px solid #400;
+  border: 3px solid #ffffff;
   color: #dcdcdc;
   width: 150px;
 }
