--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
   margin: 0;
   background-color: #000;
-  background-image: url('bliss-dark.png');
+  background-image: url('images/bliss-dark.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
